# esp32-simple-picture-frame

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  DECISIONS.md  Kconfig.projbuild  PLAN.md  PROGRESS.md  README.md  TEST_PLAN.md  TODO.md  flash.py  monitor.py  sdkconfig.defaults
.claude/agents/: security-reviewer.md
.claude/skills/build-flash/: SKILL.md
.github/workflows/: ci.yml  release.yml
components/applog/: CMakeLists.txt  applog.c
components/board/: CMakeLists.txt  axp2101.cpp  axp2101.h  board.c  pcf85063.c  pcf85063.h
components/board/include/: board.h
components/board/test/: CMakeLists.txt  test_board.c
components/config/: CMakeLists.txt  config.c
components/epd/: CMakeLists.txt  epd.c  epd.h  epd_internal.h  epd_tests.c
components/epd/include/: epd.h
components/epd/test/: CMakeLists.txt  test_epd.c
components/epd_text/: CMakeLists.txt  epd_text.c  font_8x8.h
components/errlog/: CMakeLists.txt  errlog.c
components/image_decode/: CMakeLists.txt  idf_component.yml  image_decode.c
components/image_loader/: CMakeLists.txt  image_loader.c
components/image_picker/: CMakeLists.txt  image_picker.c
components/pmic/: CMakeLists.txt  pmic.c  pmic.h  pmic_internal.h  pmic_tests.c
components/sdcard/: CMakeLists.txt  sdcard.c
components/wifi_fetch/: CMakeLists.txt  wifi_fetch.c
docs/: aitjcize-comparison.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  test_main.c  test_main.h  tests.c  tests.h
sdcard/: config.txt.example
server/: .dockerignore  .env.example  Dockerfile  MIGRATION.md  compose.yaml  config.py  database.py  install-service.sh  install.sh  main.py  migrate-to-docker.sh  requirements.txt  ruff.toml  run.sh  setup.sh  uninstall.sh
server/static/: style.css
server/templates/: frame.html  gallery.html  index.html  logs.html  nav.html
server/tests/: test_api.py  test_config.py  test_database.py
(+15 files in other folders)
